--- a/oh-package.json5
+++ b/oh-package.json5
@@ -4,7 +4,7 @@
   "description": "AntennaPod - Open source podcast manager for HarmonyOS",
   "main": "",
   "author": "",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "@ohos/hvigor-ohos-plugin": "5.0.8",
