--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,7 +1,7 @@
 {
   "app": {
     "bundleName": "com.antennapod.harmonyos",
-    "vendor": "AntennaPod",
+    "vendor": "陈云亮",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:app_icon",
