--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -22,6 +22,9 @@
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
+        "backgroundModes": [
+          "audioPlayback"
+        ],
         "skills": [
           {
             "entities": [
@@ -68,6 +71,16 @@
       {
         "name": "ohos.permission.READ_MEDIA",
         "reason": "$string:permission_read_media_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "always"
+        }
+      },
+      {
+        "name": "ohos.permission.KEEP_BACKGROUND_RUNNING",
+        "reason": "$string:permission_background_reason",
         "usedScene": {
           "abilities": [
             "EntryAbility"
