--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.antennapod.harmonyos",
+    "bundleName": "com.pangpang.antennapod",
     "vendor": "陈云亮",
     "versionCode": 1000000,
     "versionName": "1.0.0",
