fix(app): 修改应用包名及相关服务绑定信息
- 将应用的 bundleName 从 com.pangpang.antennapod 修改为 com.pangpang.antennapodhm
- 更新 PlayerService 中关联的 bundleName 保持一致性
- 确保应用标识和服务请求参数同步更新，避免版本冲突

--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.pangpang.antennapod",
+    "bundleName": "com.pangpang.antennapodhm",
     "vendor": "陈云亮",
     "versionCode": 1000000,
     "versionName": "1.0.0",
