--- a/oh-package.json5
+++ b/oh-package.json5
@@ -7,6 +7,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {},
-  "devDependencies": {}
-
+  "devDependencies": {
+    "@ohos/hypium": "1.0.18"
+  }
 }
