feat(settings): 优化通知开关启用流程并增加权限申请提示
- 新增启用通知的确认对话框，提示用户并申请通知权限
- 申请通知权限失败时显示相应的提示信息
- 新增启用新单集通知确认对话框，确保用户知晓并同意
- 启用新单集通知前校验主通知权限是否已开启，未开启则提示用户先启用
- 优化关闭通知和新单集通知时的状态更新逻辑
- 模块配置中添加通知控制权限及权限申请理由描述
- 字符串资源新增通知权限申请理由文本

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -87,6 +87,16 @@
           ],
           "when": "always"
         }
+      },
+      {
+        "name": "ohos.permission.NOTIFICATION_CONTROLLER",
+        "reason": "$string:permission_notification_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "always"
+        }
       }
     ]
   }
