--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -59,7 +59,7 @@
         }
       },
       {
-        "name": "ohos.permission.WRITE_MEDIA",
+        "name": "ohos.permission.WRITE_AUDIO",
         "reason": "$string:permission_write_media_reason",
         "usedScene": {
           "abilities": [
@@ -69,7 +69,7 @@
         }
       },
       {
-        "name": "ohos.permission.READ_MEDIA",
+        "name": "ohos.permission.READ_AUDIO",
         "reason": "$string:permission_read_media_reason",
         "usedScene": {
           "abilities": [
