--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -2,9 +2,11 @@
   "app": {
     "bundleName": "com.pangpang.antennapodhm",
     "vendor": "陈云亮",
-    "versionCode": 1000100,
-    "versionName": "1.0.1",
+    "versionCode": 1000200,
+    "versionName": "1.0.2",
     "icon": "$media:app_icon",
+    "iconForeground": "$media:app_icon_foreground",
+    "iconBackground": "$media:app_icon_background",
     "label": "$string:app_name",
     "description": "$string:app_description",
     "minAPIVersion": 12,
