--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -17,9 +17,7 @@
         "name": "EntryAbility",
         "srcEntry": "./ets/entryability/EntryAbility.ets",
         "description": "$string:EntryAbility_desc",
-        "icon": "$media:app_icon",
-        "iconForeground": "$media:app_icon_foreground",
-        "iconBackground": "$media:app_icon_background",
+        "icon": "$media:layered_image",
         "label": "$string:EntryAbility_label",
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
